<resources>
    <string name="app_name">Dr Shibly</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="dr_md_shibly_shahriar">Dr Md Shibly Shahriar</string>
    <string name="facebook">Facebook</string>
    <string name="ms_surgical_resident_thoracic_surgery">MS Surgical Resident Thoracic Surgery</string>
    <string name="todo">TODO</string>
    <string name="dr_md_shibly_shahriar1">Dr Md Shibly Shahriar</string>
    <string name="mbbs_du_bcs_health">MBBS DU BCS Health</string>
    <string name="pgt_orthopaedics_and_trauma">PGT Orthopaedics and Trauma</string>
    <string name="for_contract">For Contract</string>
    <string name="saadi">TODO</string>
    <string name="phone">Phone</string>
    <string name="todoa">TODO</string>
    <string name="message">Message</string>
    <string name="todos">TODO</string>
    <string name="y">TODO</string>
    <string name="see_more">See More</string>
    <string name="activities">Activities</string>
    <string name="freeCamp">সফল ফ্রি হেলথ ক্যাম্প এর কিছু স্থির চিত্রঃ</string>
    <string name="todoe">TODO</string>
    <string name="todog">TODO</string>
    <string name="time1">প্রতি শুক্রবার লাহিড়ী মোহনপুরে সকাল ৯.০০ টা থেকে ১.০০ টা পর্যন্ত রোগীদের সেবা দিতে উপস্থিত থাকবো ইনশা আল্লাহ।</string>
    <string name="j">TODO</string>
    <string name="d">TODO</string>
    <string name="l">TODO</string>
    <string name="sathi">প্রতি মাসের শেষ শুক্রবার এই ফ্রি চিকিৎসা সেবা চলমান থাকবে। সাথী পেশেন্ট কেয়ার সেন্টার। এবং যে কোন স্বাস্থ্য সংক্রান্ত সমস্যায় আমাকে পাবেন- তা- মীম হাসপাতাল এন্ড ডায়াগনোস্টিক সেন্টার, শ্যামলীপাড়া বাসস্ট্যান্ড, ঊল্লাপাড়া, সিরাজগঞ্জ। যোগাযোগ:</string>
    <string name="contract1">যোগাযোগঃ</string>
    <string name="phn1">+8801740556206</string>
    <string name="phn2">+8801741614181</string>
    <string name="phn0">+880130023976</string>
    <string name="ds">TODO</string>
    <string name="sq5">৬. চিকিৎসা গ্রহণের জন্য আগে থেকে সিরিয়াল নিশ্চিত করুন। ।</string>
    <string name="sq4">৫. বীর মুক্তিযোদ্ধা, মসজীদের ঈমাম, মোয়াজ্জিন, শিশু, গর্ভবতী, শিক্ষক ও বৃদ্ধ ভ্যান রিক্সা চালকদেরকে অগ্রাধিকার প্রদান।</string>
    <string name="sq3">৩. ক্যাম্পেইনের সকল রোগীদের ওজন, উচ্চতা, প্রেশার, রক্তে অক্সিজেনের মাত্রা পরিমাপ, ডিজিটাল যন্ত্রের মাধ্যমে শরীরের তাপমাত্রা নির্ণয় সহ রোগীদের ফ্রি প্রেসক্রিপশন প্রদান।</string>
    <string name="sq2">২. আউটডোর সেটিং এ দেখা যায় এমন রোগীদের ফ্রি চিকিৎসা পত্র প্রদান। জটিল কঠিন রোগীদের সুপরামর্শ প্রদান।</string>
    <string name="sq1">১. সেবা কার্যক্রম অসহায়, দরিদ্র ও মেহনতি মানুষের স্বার্থে সকলের জন্য উন্মুক্ত।</string>
    <string name="sq0">সেবার ধরণ:</string>
    <string name="video">ভিডিও গ্যালারিঃ</string>
    <string name="bye">ধন্যবাদ</string>
    <string name="space">"     "</string>
    <string name="DeveloperIdentity">Developed By Shahnewaz Saadi</string>
    <string name="enter_weight_kg">Enter weight (kg)</string>
    <string name="enter_height_cm">Enter height (cm)</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="r">TODO</string>
    <string name="preg">Enter your last menstrual period (YYYY-MM-DD):</string>
    <string name="calculatez">Calculate</string>
    <string name="bmi_calc">BMI Calc</string>
    <string name="dd">TODO</string>
    <string name="cc">Pregnancy Calc</string>
    <string name="ff">TODO</string>
    <string name="iy">Enter weight (kg)</string>
    <string name="f">Enter height (cm)</string>
    <string name="calculate_bmiz">Calculate BMI</string>
</resources>